FIX: redirect path

--- a/mysite/mytruescore/templates/dashboard.html
+++ b/mysite/mytruescore/templates/dashboard.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html style="	height: 100%;">
 <head>
 	{% load staticfiles %}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
@@ -22,15 +21,9 @@
 </head>
 
 <body>
-  <!-- <nav class="navbar navbar-dark bg-dark">
-  Navbar content
-</nav> -->
-
-<div>
-  HIII
-</div>
-
-	
+  <nav class="navbar navbar-dark bg-dark">
+    MyTrueScore
+  </nav>	
 		{% block body %}
 
 
