ADD: Card with all the websites

--- a/mysite/mytruescore/templates/dashboard.html
+++ b/mysite/mytruescore/templates/dashboard.html
@@ -15,11 +15,10 @@
 
 	<script type="text/javascript" src="{% static 'js/base.js' %}"></script>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
-  <meta name="author" content="">
-  <title>SB Admin - Start Bootstrap Template</title>
+  <meta name="author" content=""> -->
   <!-- Bootstrap core CSS-->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom fonts for this template-->
@@ -222,55 +221,42 @@
             <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
           </div>
           <!-- Example Notifications Card-->
+          
           <div class="card mb-3">
             <div class="card-header">
-              <i class="fa fa-bell-o"></i> Feed Example</div>
-            <div class="list-group list-group-flush small">
-              <a class="list-group-item list-group-item-action" href="#">
-                <div class="media">
-                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
-                  <div class="media-body">
-                    <strong>David Miller</strong>posted a new article to
-                    <strong>David Miller Website</strong>.
-                    <div class="text-muted smaller">Today at 5:43 PM - 5m ago</div>
-                  </div>
-                </div>
-              </a>
-              <a class="list-group-item list-group-item-action" href="#">
-                <div class="media">
-                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
-                  <div class="media-body">
-                    <strong>Samantha King</strong>sent you a new message!
-                    <div class="text-muted smaller">Today at 4:37 PM - 1hr ago</div>
-                  </div>
-                </div>
-              </a>
-              <a class="list-group-item list-group-item-action" href="#">
-                <div class="media">
-                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
-                  <div class="media-body">
-                    <strong>Jeffery Wellings</strong>added a new photo to the album
-                    <strong>Beach</strong>.
-                    <div class="text-muted smaller">Today at 4:31 PM - 1hr ago</div>
-                  </div>
-                </div>
-              </a>
-              <a class="list-group-item list-group-item-action" href="#">
-                <div class="media">
-                  <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/45x45" alt="">
-                  <div class="media-body">
-                    <i class="fa fa-code-fork"></i>
-                    <strong>Monica Dennis</strong>forked the
-                    <strong>startbootstrap-sb-admin</strong>repository on
-                    <strong>GitHub</strong>.
-                    <div class="text-muted smaller">Today at 3:54 PM - 2hrs ago</div>
-                  </div>
-                </div>
-              </a>
-              <a class="list-group-item list-group-item-action" href="#">View all activity...</a>
-            </div>
+              <i class="fa fa-bell-o"></i>Tian's Coding Sites</div>
+              <ul class="list-group">
+              <a href="https://www.firecode.io/pages/profile/12824" target="_blank">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                Firecode
+                <span class="badge badge-primary badge-pill">14</span>
+              </li></a>
+              <a href="https://www.hackerrank.com/wtianzhi" target="_blank">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                <img src=""  alt="">
+                Hackerrank
+                <span class="badge badge-primary badge-pill">5</span>
+              </li></a>
+              <a href="https://leetcode.com/tianzhi/" target="_blank">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                Leetcode
+                <span class="badge badge-primary badge-pill">10</span>
+              </li></a>
+              <a href="https://open.kattis.com/users/tian-zhi-wang" target="_blank">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                Kattis
+                <span class="badge badge-primary badge-pill">7</span>
+              </li></a>
+              <a href="https://auth.geeksforgeeks.org/user/Tian%20Zhi%20Wang/todo-done/" target="_blank">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                geeksforgeeks
+                <span class="badge badge-primary badge-pill">2</span>
+              </li></a>
+            </ul>
             <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
           </div>
+          
+          
         </div>
       </div>
       <!-- Example DataTables Card-->
