added files from Bootstrap

--- a/mysite/mytruescore/templates/dashboard.html
+++ b/mysite/mytruescore/templates/dashboard.html
@@ -292,10 +292,10 @@
     <script src="vendor/datatables/jquery.dataTables.js"></script>
     <script src="vendor/datatables/dataTables.bootstrap4.js"></script>
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin.min.js"></script>
+    <script src="js_1/sb-admin.min.js"></script>
     <!-- Custom scripts for this page-->
-    <script src="js/sb-admin-datatables.min.js"></script>
-    <script src="js/sb-admin-charts.min.js"></script>
+    <script src="js_1/sb-admin-datatables.min.js"></script>
+    <script src="js_1/sb-admin-charts.min.js"></script>
   </div>
 
 
