--- a/mysite/mytruescore/templates/dashboard.html
+++ b/mysite/mytruescore/templates/dashboard.html
@@ -39,7 +39,7 @@
         <li class="nav-item">
           <form class="form-inline my-2 my-lg-0 mr-lg-2">
             <div class="input-group">
-              <input class="form-control" type="text" placeholder="Search for...">
+              <input class="form-control" type="text" placeholder="Search for a coder...">
               <span class="input-group-append">
                 <button class="btn btn-primary" type="button">
                   <i class="fa fa-search"></i>
@@ -75,7 +75,7 @@
               <div class="mr-5">Tianzhi (@tianzhi) </div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="#">
-              <span class="float-left">View Details</span>
+              <span class="float-left">CS Student</span>
               <span class="float-right">
                 <i class="fa fa-angle-right"></i>
               </span>
@@ -88,10 +88,10 @@
               <div class="card-body-icon">
                 <i class="fa fa-fw fa-list"></i>
               </div>
-              <div class="mr-5">Problems Solved</div>
+              <div class="mr-5">{{ problemsSolved }}</div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="#">
-              <span class="float-left">{{ problemsSolved }}</span>
+              <span class="float-left">Problems Solved</span>
               <span class="float-right">
                 <i class="fa fa-angle-right"></i>
               </span>
@@ -104,10 +104,10 @@
               <div class="card-body-icon">
                 <i class="fa fa-fw fa-support"></i>
               </div>
-              <div class="mr-5">Languages Used</div>
+              <div class="mr-5">C++, Java</div>
             </div>
             <a class="card-footer text-white clearfix small z-1" href="#">
-              <span class="float-left">C++, Java</span>
+              <span class="float-left">Languages Used</span>
               <span class="float-right">
                 <i class="fa fa-angle-right"></i>
               </span>
@@ -163,21 +163,17 @@
           <!-- /Card Columns-->
         </div>
         <div class="col-lg-4">
-          <!-- Example Pie Chart Card-->
-          <div class="card mb-3">
-            <div class="card-header">
-              <i class="fa fa-pie-chart"></i> Pie Chart Example</div>
-              <div class="card-body"><div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
-                <canvas id="myPieChart" width="672" height="672" class="chartjs-render-monitor" style="display: block; height: 336px; width: 336px;"></canvas>
-              </div>
-            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-          </div>
           <!-- Example Notifications Card-->
           
           <div class="card mb-3">
             <div class="card-header">
               <i class="fa fa-bell-o"></i>Tian's Coding Sites</div>
               <ul class="list-group">
+                <a href="http://uhunt.onlinejudge.org/id/623223" target="_blank">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                  UVA
+                  <span class="badge badge-primary badge-pill">62</span>
+                </li></a>
               <a href="https://www.firecode.io/pages/profile/12824" target="_blank">
               <li class="list-group-item d-flex justify-content-between align-items-center">
                 Firecode
