--- a/mysite/mytruescore/templates/dashboard.html
+++ b/mysite/mytruescore/templates/dashboard.html
@@ -127,7 +127,7 @@
                 <!-- <div class="col-sm-8 my-auto"><div class="chartjs-size-monitor" style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div> -->
                   <!-- <canvas id="myBarChart" width="972" height="486" class="chartjs-render-monitor" style="display: block; height: 243px; width: 486px;"></canvas> -->
                 <!-- </div> -->
-                <ul class="list-group">
+                <ul class="list-group" style="width:100%;">
                   <a href="https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&category=24&page=show_problem&problem=3051" target="_blank">
                   <li class="list-group-item d-flex justify-content-between align-items-center">
                     11900 - Boiled Eggs
