ADD: Style code

--- a/mysite/mytruescore/templates/dashboard.html
+++ b/mysite/mytruescore/templates/dashboard.html
@@ -129,27 +129,27 @@
                 <!-- </div> -->
                 <ul class="list-group" style="width:100%;">
                   <a href="https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&category=24&page=show_problem&problem=3051" target="_blank">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <li class="list-group-item d-flex justify-content-between align-items-center" style="margin-bottom: -1px;">
                     11900 - Boiled Eggs
                     <span class="badge badge-primary badge-pill">C++</span>
                   </li></a>
                   <a href="https://www.hackerrank.com/challenges/game-of-stones-1/problem" target="_blank">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <li class="list-group-item d-flex justify-content-between align-items-center" style="margin-bottom: -1px;">
                     Game of Stones
                     <span class="badge badge-primary badge-pill">python</span>
                   </li></a>
                   <a href="https://www.hackerrank.com/challenges/a-chessboard-game-1/problem" target="_blank">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <li class="list-group-item d-flex justify-content-between align-items-center" style="margin-bottom: -1px;">
                     A Chessboard Game
                     <span class="badge badge-primary badge-pill">python</span>
                   </li></a>
                   <a href="https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&category=24&page=show_problem&problem=3747" target="_blank">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <li class="list-group-item d-flex justify-content-between align-items-center" style="margin-bottom: -1px;">
                     12325 - Zombie's Treasure Chest
                     <span class="badge badge-primary badge-pill">C</span>
                   </li></a>
                   <a href="https://open.kattis.com/problems/hello" target="_blank">
-                  <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <li class="list-group-item d-flex justify-content-between align-items-center" style="margin-bottom: -1px;">
                     Hello World!
                     <span class="badge badge-primary badge-pill">Java</span>
                   </li></a>
